[package]
name = "copycat"
version = "0.2.0"
authors = ["Matheus Lessa <matheus@fastmail.com>"]
edition = "2018"
description = "A simple crossplatform clipboard cli interface. Pipe into it to copy. Pipe from it to paste."
readme = "README.md"
homepage = "https://github.com/matheuslessarodrigues/copycat"
repository = "https://github.com/matheuslessarodrigues/copycat"
license = "MIT"
keywords = ["clip", "clipboard", "copy"]
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2.14"
clipboard-win = "3.0.2"
winapi = "0.3.8"
byteorder = "1.3.4"
