[package]
name = "copycat"
version = "0.6.3"
authors = ["Matheus Lessa"]
edition = "2018"
description = "A simple crossplatform clipboard cli interface. Pipe into it to copy. Pipe from it to paste."
readme = "README.md"
homepage = "https://github.com/vamolessa/copycat"
repository = "https://github.com/vamolessa/copycat"
license = "MIT"
keywords = ["clip", "clipboard", "copy"]
categories = ["command-line-utilities"]

[dependencies]
atty = "0.2.14"
clipboard-win = "3.1.0"